--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,5 +63,5 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
-  "files": ["index.tsx"]
+  "files": ["index.ts"]
 }
